[README] Documentation for lowest memory footprint